# plumber

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md  run-clang-format.sh  run-qmlformat-format.sh
.github/: FUNDING.yml
cmake/: FindLibrdkafka.cmake  tools.cmake
osx/: build.sh  build_dmg.sh
osx/kafkaui.app/Contents/: Info.plist
osx/kafkaui.app/Contents/Resources/: kafkaui.icns
osx/rc/: Info.plist.in
src/: CMakeLists.txt  kafkaui_ru_RU.ts  main.cpp  plumber_ru_RU.ts  qml.qrc  qtquickcontrols2.conf
src/components/: AvroOption.cpp  AvroOption.h  BrokerModel.cpp  BrokerModel.h  CMakeLists.txt  Cluster.cpp  Cluster.h  ConfigModel.cpp  ConfigModel.h  Consumer.cpp  Consumer.h  ConsumerHelperModels.cpp  ConsumerHelperModels.h  ConsumerModel.cpp  ConsumerModel.h  ErrorWrap.cpp  ErrorWrap.h  ExportImportFabric.cpp  ExportImportFabric.h  Helpers.cpp  Helpers.h  HexView.cpp  HexView.h  KafkaConnectivityTester.cpp  KafkaConnectivityTester.h  Message.cpp  Message.h  MessageModel.cpp  MessageModel.h  Producer.cpp  Producer.h  ProtoOption.cpp  ProtoOption.h  RecordsExporter.cpp  RecordsExporter.h  Settings.cpp  Settings.h  TopicCreator.cpp  TopicCreator.h  TopicModel.cpp  (+3 more)
src/configuration/: CMakeLists.txt  ClusterConfig.cpp  ClusterConfig.h  Configuration.cpp  Configuration.h
src/core/: AbstractConverter.cpp  AbstractConverter.h  AdminClient.hpp  AdminCommon.hpp  CMakeLists.txt  ConsumerRecord.h  ConsumerRecordBuffer.cpp  ConsumerRecordBuffer.h  ConsumerRecordsExporter.cpp  ConsumerRecordsExporter.h  Error.cpp  Error.h  Filter.cpp  Filter.h  GroupInfo.cpp  GroupInfo.h  GroupInfo.hpp  KafkaAdmin.cpp  KafkaAdmin.h  KafkaConsumer.cpp  KafkaConsumer.h  KafkaHelper.hpp  KafkaProducer.cpp  KafkaProducer.h  KafkaStatistic.cpp  KafkaStatistic.h  Limiter.cpp  Limiter.h  ProducerRecord.h  Types.h
src/formats/: CMakeLists.txt  protobuf.qrc
src/formats/avro/: AvroConverter.cpp  AvroConverter.h
src/formats/protobuf/: ProtobufConverter.cpp  ProtobufConverter.h  ProtobufErrorCollector.cpp  ProtobufErrorCollector.h  ProtobufMessagesModel.cpp  ProtobufMessagesModel.h  ProtobufSourceTree.cpp  ProtobufSourceTree.h
src/qml/: BrokerDelegate.qml  Brokers.qml  ClusterConfigurationDialog.qml  Consumers.qml  CreateTopicDialog.qml  MainScreen.qml  Overview.qml  OverviewItem.qml  StartScreen.qml  Topics.qml  constants.js  main.qml  pages.js  style.js
src/qml/Components/: BlueButton.qml  Button.qml  ErrorDialog.qml  ExportImportDialog.qml  Label.qml  MessageBox.qml  TabBar.qml  TabButton.qml  TextArea.qml  TextButton.qml  TypeCombobox.qml
src/qml/Consumer/: AvroOptions.qml  ConsumerScreen.qml  FilterInput.qml  FormatSelector.qml  LimitInput.qml  MessageTableView.qml  MessageView.qml  ProtobufOptions.qml  RangeAndFilters.qml  StartInput.qml  TypeCombobox.qml
src/qml/Group/: ConsumerTableView.qml  GroupView.qml  GroupsView.qml
src/qml/LeftPanel/: Menu.qml  MenuItem.qml  Panel.qml
src/qml/Producer/: AvroOptions.qml  DataPage.qml  OptionsPage.qml  ProducerScreen.qml  ProtobufOptions.qml
src/services/: CMakeLists.txt  ConfigurationService.cpp  ConfigurationService.h  ErrorsService.cpp  ErrorsService.h  Registry.cpp  Registry.h
src/utils/: CMakeLists.txt  KafkaUtility.cpp  KafkaUtility.h
tests/data/: details.json
win/: build.ps1
win/rc/: kafkaui.rc  plumber.rc
